--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <body>
     <div class="header">
       <h1>Stakeholder Map</h1>
-      <h4>Click on a dot to get more information.</h4>
+
     </div>
     <div class="content">
-      <div class="rectangle"></div>
+      <div class="rectangle">
+        <h4>Click on a dot to get more information.</h4>
+      </div>
       <div class="svg-container" id="radar-container">
         <svg
           id="radar-plot"
