--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Radar Plot</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header">
       <h1>Stakeholder Map</h1>
-
     </div>
     <div class="content">
       <div class="rectangle">
@@ -28,6 +27,6 @@
         </svg>
       </div>
     </div>
-    <script src="/radar-plot.js"></script>
+    <script src="radar-plot.js"></script>
   </body>
 </html>
