define type: module

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         </svg>
       </div>
     </div>
-    <script src="radar-plot.js"></script>
+    <script type="module" src="radar-plot.js"></script>
   </body>
 </html>
