add tags to html + minor styling

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
       <h1>Stakeholder Map</h1>
     </div>
     <div class="content">
-      <div class="rectangle">
-        <h4>Click on a dot to get more information.</h4>
+      <div class="tag-container">
+        <!-- Tags will be added here -->
       </div>
+        <div id="infobox">
+          <!-- Infobox content here -->
+        </div>
+        <div class="rectangle">
+          <h4>Click on a dot to get more information.</h4>
+        </div>
       <div class="svg-container" id="radar-container">
         <svg
           id="radar-plot"
